--- a/INTITA/Modules/Profile/Profile.storyboard
+++ b/INTITA/Modules/Profile/Profile.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,18 +18,13 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CDt-01-LFA">
                                 <rect key="frame" x="0.0" y="44" width="414" height="316"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" name="mainColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="316" id="eut-oz-H0R"/>
                                 </constraints>
                             </view>
-                            <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UiQ-Fh-0Pg">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8Sk-rk-Jzs">
                                 <rect key="frame" x="0.0" y="360" width="414" height="536"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8Sk-rk-Jzs">
-                                <rect key="frame" x="0.0" y="360" width="414" height="502"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -38,16 +32,12 @@
                         <color key="backgroundColor" name="mainColor"/>
                         <color key="tintColor" name="mainColor"/>
                         <constraints>
+                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="trailing" secondItem="TJz-4L-rkG" secondAttribute="trailing" id="26Y-yG-7n4"/>
                             <constraint firstItem="TJz-4L-rkG" firstAttribute="trailing" secondItem="CDt-01-LFA" secondAttribute="trailing" id="2t8-EC-YIe"/>
-                            <constraint firstAttribute="bottom" secondItem="UiQ-Fh-0Pg" secondAttribute="bottom" id="5GT-r2-2td"/>
-                            <constraint firstItem="TJz-4L-rkG" firstAttribute="bottom" secondItem="8Sk-rk-Jzs" secondAttribute="bottom" id="DNL-4M-JOY"/>
-                            <constraint firstItem="UiQ-Fh-0Pg" firstAttribute="top" secondItem="CDt-01-LFA" secondAttribute="bottom" id="FPT-J9-Tey"/>
+                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="leading" secondItem="TJz-4L-rkG" secondAttribute="leading" id="GXl-7l-R55"/>
                             <constraint firstItem="8Sk-rk-Jzs" firstAttribute="top" secondItem="CDt-01-LFA" secondAttribute="bottom" id="VeZ-lG-ivg"/>
-                            <constraint firstItem="TJz-4L-rkG" firstAttribute="trailing" secondItem="UiQ-Fh-0Pg" secondAttribute="trailing" id="f9j-G8-xIo"/>
-                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="leading" secondItem="UiQ-Fh-0Pg" secondAttribute="leading" id="fu2-Zb-Qma"/>
+                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="bottom" secondItem="rQk-ji-JVP" secondAttribute="bottom" id="hNm-3t-BMQ"/>
                             <constraint firstItem="CDt-01-LFA" firstAttribute="leading" secondItem="TJz-4L-rkG" secondAttribute="leading" id="hYl-dc-jXN"/>
-                            <constraint firstItem="UiQ-Fh-0Pg" firstAttribute="leading" secondItem="TJz-4L-rkG" secondAttribute="leading" id="jaV-Mh-Vdv"/>
-                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="trailing" secondItem="UiQ-Fh-0Pg" secondAttribute="trailing" id="of8-2y-Asy"/>
                             <constraint firstItem="CDt-01-LFA" firstAttribute="top" secondItem="TJz-4L-rkG" secondAttribute="top" id="y7y-gF-HPX"/>
                         </constraints>
                     </view>
@@ -55,8 +45,8 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="headerView" destination="CDt-01-LFA" id="gSu-hI-RIc"/>
+                        <outlet property="headerViewHeightConstraint" destination="eut-oz-H0R" id="GaI-Pm-XRU"/>
                         <outlet property="tableView" destination="8Sk-rk-Jzs" id="FgA-pt-u98"/>
-                        <outlet property="tableViewWrapper" destination="UiQ-Fh-0Pg" id="Ihg-ka-qHg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YMc-U3-q87" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -68,8 +58,5 @@
         <namedColor name="mainColor">
             <color red="0.29399999976158142" green="0.45899999141693115" blue="0.64300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
