--- a/INTITA/Modules/Profile/Profile.storyboard
+++ b/INTITA/Modules/Profile/Profile.storyboard
@@ -11,22 +11,22 @@
         <!--Profile View Controller-->
         <scene sceneID="f6i-aT-cIb">
             <objects>
-                <viewController storyboardIdentifier="ProfileViewController" id="zrl-RN-Mbp" customClass="ProfileViewController" customModule="INTITA" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="rQk-ji-JVP">
+                <viewController storyboardIdentifier="ProfileViewController" autoresizesArchivedViewToFullSize="NO" modalTransitionStyle="flipHorizontal" id="zrl-RN-Mbp" customClass="ProfileViewController" customModule="INTITA" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rQk-ji-JVP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8Sk-rk-Jzs">
+                                <rect key="frame" x="0.0" y="355" width="414" height="541"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CDt-01-LFA">
                                 <rect key="frame" x="0.0" y="44" width="414" height="316"/>
-                                <color key="backgroundColor" name="mainColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="316" id="eut-oz-H0R"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8Sk-rk-Jzs">
-                                <rect key="frame" x="0.0" y="360" width="414" height="536"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="TJz-4L-rkG"/>
                         <color key="backgroundColor" name="mainColor"/>
@@ -35,9 +35,10 @@
                             <constraint firstItem="8Sk-rk-Jzs" firstAttribute="trailing" secondItem="TJz-4L-rkG" secondAttribute="trailing" id="26Y-yG-7n4"/>
                             <constraint firstItem="TJz-4L-rkG" firstAttribute="trailing" secondItem="CDt-01-LFA" secondAttribute="trailing" id="2t8-EC-YIe"/>
                             <constraint firstItem="8Sk-rk-Jzs" firstAttribute="leading" secondItem="TJz-4L-rkG" secondAttribute="leading" id="GXl-7l-R55"/>
-                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="top" secondItem="CDt-01-LFA" secondAttribute="bottom" id="VeZ-lG-ivg"/>
+                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="top" secondItem="CDt-01-LFA" secondAttribute="bottom" constant="-5" id="VeZ-lG-ivg"/>
                             <constraint firstItem="8Sk-rk-Jzs" firstAttribute="bottom" secondItem="rQk-ji-JVP" secondAttribute="bottom" id="hNm-3t-BMQ"/>
                             <constraint firstItem="CDt-01-LFA" firstAttribute="leading" secondItem="TJz-4L-rkG" secondAttribute="leading" id="hYl-dc-jXN"/>
+                            <constraint firstItem="CDt-01-LFA" firstAttribute="width" secondItem="TJz-4L-rkG" secondAttribute="width" id="w6k-dv-hp0"/>
                             <constraint firstItem="CDt-01-LFA" firstAttribute="top" secondItem="TJz-4L-rkG" secondAttribute="top" id="y7y-gF-HPX"/>
                         </constraints>
                     </view>
