--- a/INTITA/Modules/LogInScreen/LogInCells/LogoTableViewCell.xib
+++ b/INTITA/Modules/LogInScreen/LogInCells/LogoTableViewCell.xib
@@ -1,64 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="268" id="KGk-i7-Jjw" customClass="LogoTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="465" height="268"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="148" id="Zzs-Fw-eVt" customClass="LogoTableViewCell" customModule="INTITA" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="243"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="465" height="268"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zzs-Fw-eVt" id="rxd-oC-SMI">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="243"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="UQO-o3-l4y">
-                        <rect key="frame" x="16" y="16" width="433" height="93"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="x0l-26-yBK">
+                        <rect key="frame" x="29" y="16" width="317" height="93"/>
+                        <color key="backgroundColor" name="mainColor"/>
                     </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pKL-yH-cFC">
-                        <rect key="frame" x="152.5" y="256" width="160" height="4"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="el5-P0-Mg2">
+                        <rect key="frame" x="148" y="206" width="79" height="2"/>
                         <color key="backgroundColor" name="mainColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="4" id="3aO-PR-fFM"/>
-                            <constraint firstAttribute="width" constant="160" id="RZs-TE-g8n"/>
+                            <constraint firstAttribute="height" constant="2" id="UPW-E9-3GJ"/>
+                            <constraint firstAttribute="width" constant="79" id="l4q-F0-BKw"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zdu-L8-wGo">
-                        <rect key="frame" x="20" y="117" width="425" height="131"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PvZ-cZ-96l">
-                        <rect key="frame" x="202" y="167" width="61.5" height="31.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1PR-YO-Ecr">
+                        <rect key="frame" x="48" y="143" width="279" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="LkU-Q4-owq"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                         <color key="textColor" name="mainColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Zdu-L8-wGo" firstAttribute="top" secondItem="UQO-o3-l4y" secondAttribute="bottom" constant="8" symbolic="YES" id="0et-ev-RiL"/>
-                    <constraint firstItem="UQO-o3-l4y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="3iD-tC-9F6"/>
-                    <constraint firstItem="PvZ-cZ-96l" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="S4O-m8-hVH"/>
-                    <constraint firstItem="UQO-o3-l4y" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Tsi-rV-GIa"/>
-                    <constraint firstItem="PvZ-cZ-96l" firstAttribute="centerY" secondItem="Zdu-L8-wGo" secondAttribute="centerY" id="cFd-95-ykp"/>
-                    <constraint firstAttribute="bottom" secondItem="pKL-yH-cFC" secondAttribute="bottom" constant="8" id="cca-ic-ymJ"/>
-                    <constraint firstItem="pKL-yH-cFC" firstAttribute="top" secondItem="Zdu-L8-wGo" secondAttribute="bottom" constant="8" id="dnk-DN-ONy"/>
-                    <constraint firstItem="UQO-o3-l4y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="lbR-Fy-zzJ"/>
-                    <constraint firstItem="Zdu-L8-wGo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="pd8-F8-1PG"/>
-                    <constraint firstItem="Zdu-L8-wGo" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="pfC-QQ-YO9"/>
-                    <constraint firstItem="pKL-yH-cFC" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="s3v-Mi-5ff"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="1PR-YO-Ecr" secondAttribute="trailing" constant="28" id="33d-bh-Reo"/>
+                    <constraint firstItem="x0l-26-yBK" firstAttribute="leading" secondItem="rxd-oC-SMI" secondAttribute="leading" constant="29" id="5e6-Mu-ryn"/>
+                    <constraint firstItem="1PR-YO-Ecr" firstAttribute="leading" secondItem="rxd-oC-SMI" secondAttribute="leadingMargin" constant="28" id="Eb0-UY-XAZ"/>
+                    <constraint firstItem="x0l-26-yBK" firstAttribute="width" secondItem="x0l-26-yBK" secondAttribute="height" multiplier="317:93" id="GKk-a0-qQQ"/>
+                    <constraint firstItem="1PR-YO-Ecr" firstAttribute="top" secondItem="x0l-26-yBK" secondAttribute="bottom" constant="34" id="LwX-yG-BFd"/>
+                    <constraint firstItem="x0l-26-yBK" firstAttribute="top" secondItem="rxd-oC-SMI" secondAttribute="top" constant="16" id="XGX-Fu-NZl"/>
+                    <constraint firstItem="el5-P0-Mg2" firstAttribute="centerX" secondItem="rxd-oC-SMI" secondAttribute="centerX" id="Y3C-ch-1oB"/>
+                    <constraint firstAttribute="trailing" secondItem="x0l-26-yBK" secondAttribute="trailing" constant="29" id="fTx-m6-ll7"/>
+                    <constraint firstItem="el5-P0-Mg2" firstAttribute="top" secondItem="1PR-YO-Ecr" secondAttribute="bottom" constant="28" id="tmh-gF-GIU"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <viewLayoutGuide key="safeArea" id="ne4-eu-jM1"/>
             <connections>
-                <outlet property="authLabel" destination="PvZ-cZ-96l" id="pvW-RF-aI5"/>
+                <outlet property="authLabel" destination="1PR-YO-Ecr" id="5R7-b3-D6K"/>
+                <outlet property="logoImageView" destination="x0l-26-yBK" id="k9y-cz-AgJ"/>
             </connections>
-            <point key="canvasLocation" x="184.78260869565219" y="53.571428571428569"/>
+            <point key="canvasLocation" x="-146" y="1"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -66,8 +64,5 @@
         <namedColor name="mainColor">
             <color red="0.29399999976158142" green="0.45899999141693115" blue="0.64300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
