--- a/INTITA/Modules/LogInScreen/LogInCells/RegisterButtonTableViewCell.xib
+++ b/INTITA/Modules/LogInScreen/LogInCells/RegisterButtonTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,15 +11,18 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="104" id="KGk-i7-Jjw" customClass="RegisterButtonTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="402" height="104"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="402" height="104"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5nh-iM-lxR">
-                        <rect key="frame" x="16" y="16" width="370" height="72"/>
+                        <rect key="frame" x="28" y="21" width="319" height="55"/>
                         <color key="backgroundColor" name="mainColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="55" id="RTY-6I-Pkd"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                         <state key="normal" title="Button">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -30,9 +33,8 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="5nh-iM-lxR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="EE4-tq-Qxy"/>
-                    <constraint firstItem="5nh-iM-lxR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="GxE-l2-JH5"/>
-                    <constraint firstItem="5nh-iM-lxR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Kv8-36-8sF"/>
+                    <constraint firstItem="5nh-iM-lxR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="GxE-l2-JH5"/>
+                    <constraint firstItem="5nh-iM-lxR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="Kv8-36-8sF"/>
                     <constraint firstItem="5nh-iM-lxR" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Wln-LD-9mw"/>
                 </constraints>
             </tableViewCellContentView>
