--- a/INTITA/Modules/LogInScreen/LogInCells/TextTableViewCell.xib
+++ b/INTITA/Modules/LogInScreen/LogInCells/TextTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,14 +10,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="145" id="KGk-i7-Jjw" customClass="TextTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="401" height="145"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="401" height="145"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PHC-3C-b15">
-                        <rect key="frame" x="16" y="8" width="369" height="87"/>
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PHC-3C-b15">
+                        <rect key="frame" x="28" y="1" width="319" height="55"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="55" id="nSV-VW-anm"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
@@ -25,20 +28,20 @@
                         </connections>
                     </textField>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="C17-y3-Nmd">
-                        <rect key="frame" x="317" y="26" width="52" height="51"/>
+                        <rect key="frame" x="311" y="13" width="32" height="31"/>
                         <color key="tintColor" red="1" green="0.36862435329999999" blue="0.51020655709999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="C17-y3-Nmd" secondAttribute="height" multiplier="1:1" id="Qdx-0S-eDv"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hf-iG-osq">
-                        <rect key="frame" x="16" y="99" width="369" height="16"/>
+                        <rect key="frame" x="16" y="60" width="343" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="1" green="0.36862435329999999" blue="0.51020655709999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XxJ-o9-brx">
-                        <rect key="frame" x="317" y="25.5" width="52" height="52"/>
+                        <rect key="frame" x="311" y="12.5" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="XxJ-o9-brx" secondAttribute="height" multiplier="1:1" id="zzF-zz-iPB"/>
                         </constraints>
@@ -53,18 +56,16 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="C17-y3-Nmd" firstAttribute="centerY" secondItem="PHC-3C-b15" secondAttribute="centerY" id="DbS-jI-FoG"/>
-                    <constraint firstItem="PHC-3C-b15" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.6" id="ENf-eK-8N7"/>
                     <constraint firstItem="6hf-iG-osq" firstAttribute="top" secondItem="PHC-3C-b15" secondAttribute="bottom" constant="4" id="LuQ-W9-sic"/>
-                    <constraint firstItem="C17-y3-Nmd" firstAttribute="height" secondItem="PHC-3C-b15" secondAttribute="height" multiplier="0.6" id="QLm-0Y-800"/>
                     <constraint firstItem="XxJ-o9-brx" firstAttribute="height" secondItem="C17-y3-Nmd" secondAttribute="height" id="X7m-WJ-6P6"/>
                     <constraint firstItem="6hf-iG-osq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="XkX-zZ-hqX"/>
                     <constraint firstAttribute="trailing" secondItem="XxJ-o9-brx" secondAttribute="trailing" constant="32" id="blc-yD-hLa"/>
                     <constraint firstItem="XxJ-o9-brx" firstAttribute="centerY" secondItem="PHC-3C-b15" secondAttribute="centerY" id="g9M-DM-bqf"/>
-                    <constraint firstItem="PHC-3C-b15" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="hCf-Ir-K0x"/>
+                    <constraint firstItem="PHC-3C-b15" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="hCf-Ir-K0x"/>
                     <constraint firstAttribute="trailing" secondItem="C17-y3-Nmd" secondAttribute="trailing" constant="32" id="nP0-dI-OHd"/>
                     <constraint firstItem="PHC-3C-b15" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="pYl-O5-Vgw"/>
                     <constraint firstItem="6hf-iG-osq" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="pnu-ai-VV2"/>
-                    <constraint firstItem="PHC-3C-b15" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="rOP-M1-k59"/>
+                    <constraint firstItem="PHC-3C-b15" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="1" id="rOP-M1-k59"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
