--- a/INTITA/Modules/Settings/Settings.storyboard
+++ b/INTITA/Modules/Settings/Settings.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Full Profile View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="HQH-HS-Y9E">
             <objects>
-                <viewController storyboardIdentifier="FullProfileViewController" id="SB3-BW-lIE" customClass="FullProfileViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingsViewController" id="SB3-BW-lIE" customClass="SettingsViewController" customModule="INTITA" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9Dg-D4-xHT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -25,7 +25,7 @@
                                     <constraint firstAttribute="height" constant="188" id="3US-fx-97A"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cjb-vl-QM8">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cjb-vl-QM8">
                                 <rect key="frame" x="0.0" y="232" width="414" height="664"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
@@ -42,6 +42,10 @@
                             <constraint firstItem="G8j-Qq-Nlp" firstAttribute="leading" secondItem="Npq-ax-oex" secondAttribute="leading" id="b5y-bO-o9x"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="headerView" destination="G8j-Qq-Nlp" id="pGp-N6-ORF"/>
+                        <outlet property="tableView" destination="Cjb-vl-QM8" id="kE8-9V-rTH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bwa-g2-VJ6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
