--- a/INTITA/Modules/Profile/Profile.storyboard
+++ b/INTITA/Modules/Profile/Profile.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -48,6 +48,7 @@
                         <outlet property="headerView" destination="CDt-01-LFA" id="gSu-hI-RIc"/>
                         <outlet property="headerViewHeightConstraint" destination="eut-oz-H0R" id="GaI-Pm-XRU"/>
                         <outlet property="tableView" destination="8Sk-rk-Jzs" id="FgA-pt-u98"/>
+                        <outlet property="tableViewBottomConstraint" destination="hNm-3t-BMQ" id="hdb-J4-Mwd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YMc-U3-q87" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
