--- a/INTITA/Modules/TasksScreen/Tasks.storyboard
+++ b/INTITA/Modules/TasksScreen/Tasks.storyboard
@@ -18,30 +18,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="1Tt-cv-wkU">
-                                <rect key="frame" x="24" y="60" width="366" height="30"/>
+                                <rect key="frame" x="24" y="60" width="366" height="50"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings" translatesAutoresizingMaskIntoConstraints="NO" id="kVO-1a-Tsr">
-                                        <rect key="frame" x="0.0" y="0.0" width="24" height="30"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settingsForTask" translatesAutoresizingMaskIntoConstraints="NO" id="kVO-1a-Tsr">
+                                        <rect key="frame" x="0.0" y="0.0" width="24" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="9WW-Yp-Be2"/>
                                         </constraints>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uqf-QR-4QM">
-                                        <rect key="frame" x="32" y="0.0" width="144" height="30"/>
-                                        <state key="normal" title="Приоритеты"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uqf-QR-4QM" userLabel="priorities">
+                                        <rect key="frame" x="32" y="0.0" width="98.5" height="50"/>
+                                        <state key="normal" title="Priorities">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ezt-6b-fMH">
-                                        <rect key="frame" x="184" y="0.0" width="48.5" height="30"/>
-                                        <state key="normal" title="Тип"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ezt-6b-fMH" userLabel="types">
+                                        <rect key="frame" x="138.5" y="0.0" width="67.5" height="50"/>
+                                        <state key="normal" title="Types">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b9J-We-JcR">
-                                        <rect key="frame" x="240.5" y="0.0" width="125.5" height="30"/>
-                                        <state key="normal" title="Группы"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b9J-We-JcR" userLabel="groups">
+                                        <rect key="frame" x="214" y="0.0" width="152" height="50"/>
+                                        <state key="normal" title="Groups">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                     </button>
                                 </subviews>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pKX-hh-k7k">
-                                <rect key="frame" x="24" y="114" width="366" height="48"/>
+                                <rect key="frame" x="24" y="134" width="366" height="48"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="3hp-ed-3aB"/>
@@ -68,14 +74,26 @@
                                     <outlet property="delegate" destination="WAw-Vl-jVE" id="tTY-Vd-Xit"/>
                                 </connections>
                             </collectionView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PIX-Z3-DhF">
+                                <rect key="frame" x="24" y="206" width="366" height="583"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="WAw-Vl-jVE" id="9Xe-4K-oWx"/>
+                                    <outlet property="delegate" destination="WAw-Vl-jVE" id="eJD-Xe-aYK"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="laF-lW-0hn"/>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="1Tt-cv-wkU" firstAttribute="top" secondItem="laF-lW-0hn" secondAttribute="top" constant="16" id="1cf-U9-Qh6"/>
                             <constraint firstItem="laF-lW-0hn" firstAttribute="trailing" secondItem="pKX-hh-k7k" secondAttribute="trailing" constant="24" id="Fk1-oT-PDb"/>
+                            <constraint firstItem="PIX-Z3-DhF" firstAttribute="leading" secondItem="laF-lW-0hn" secondAttribute="leading" constant="24" id="HSc-Kw-jRm"/>
                             <constraint firstItem="pKX-hh-k7k" firstAttribute="top" secondItem="1Tt-cv-wkU" secondAttribute="bottom" constant="24" id="W2J-8H-cqt"/>
                             <constraint firstItem="pKX-hh-k7k" firstAttribute="leading" secondItem="laF-lW-0hn" secondAttribute="leading" constant="24" id="a7I-jK-fKb"/>
+                            <constraint firstItem="laF-lW-0hn" firstAttribute="bottom" secondItem="PIX-Z3-DhF" secondAttribute="bottom" constant="24" id="b59-Y5-ybn"/>
+                            <constraint firstItem="laF-lW-0hn" firstAttribute="trailing" secondItem="PIX-Z3-DhF" secondAttribute="trailing" constant="24" id="gjj-Vp-cNY"/>
+                            <constraint firstItem="PIX-Z3-DhF" firstAttribute="top" secondItem="pKX-hh-k7k" secondAttribute="bottom" constant="24" id="sFx-CP-xuA"/>
                             <constraint firstItem="1Tt-cv-wkU" firstAttribute="leading" secondItem="laF-lW-0hn" secondAttribute="leading" constant="24" id="vL3-dH-tNe"/>
                             <constraint firstItem="laF-lW-0hn" firstAttribute="trailing" secondItem="1Tt-cv-wkU" secondAttribute="trailing" constant="24" id="xfp-dH-5GO"/>
                         </constraints>
@@ -83,7 +101,11 @@
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="groups" destination="b9J-We-JcR" id="3Xs-lN-Kbs"/>
+                        <outlet property="priorities" destination="uqf-QR-4QM" id="7Yh-lD-bnn"/>
+                        <outlet property="taskTableView" destination="PIX-Z3-DhF" id="NwH-5L-nKh"/>
                         <outlet property="tasksHeadersCollectionView" destination="pKX-hh-k7k" id="bpy-au-WY1"/>
+                        <outlet property="types" destination="ezt-6b-fMH" id="0MT-pw-gxD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RwT-fB-w4k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -92,7 +114,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="settings" width="30" height="30"/>
+        <image name="settingsForTask" width="50" height="50"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
