--- a/INTITA/Modules/TasksScreen/TasksCells/TaskCell.xib
+++ b/INTITA/Modules/TasksScreen/TasksCells/TaskCell.xib
@@ -9,72 +9,58 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="reuseForTask" id="gTV-IL-0wX" customClass="TaskCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="387" height="95"/>
-            <autoresizingMask key="autoresizingMask"/>
-            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="387" height="95"/>
-                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseForTask" rowHeight="99" id="KGk-i7-Jjw" customClass="TaskCell" customModule="INTITA" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
+                <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AOg-Au-QCJ">
-                        <rect key="frame" x="24" y="8.5" width="33" height="20.5"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20.5" id="Jba-RE-Z0E"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W6A-OC-y2r">
+                        <rect key="frame" x="24" y="16" width="33" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jfG-mx-cGK">
-                        <rect key="frame" x="24" y="37" width="36" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="nPA-17-NYQ"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vug-TO-h1k">
+                        <rect key="frame" x="24" y="62" width="36" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Priority" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6M8-SZ-LUZ">
-                        <rect key="frame" x="24" y="66" width="55" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="F9Y-Ac-7Oh"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Id" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UvQ-fI-YSh">
+                        <rect key="frame" x="281" y="16" width="15" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Id" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OzC-gj-Y2F">
-                        <rect key="frame" x="348" y="8" width="15" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="sBL-7k-78c"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Priority" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZH-ME-fie">
+                        <rect key="frame" x="241" y="62" width="55" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-            </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <color key="backgroundColor" red="0.83578241139999998" green="1" blue="0.94942863980000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-            <constraints>
-                <constraint firstItem="jfG-mx-cGK" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="24" id="BFL-x1-Lp7"/>
-                <constraint firstItem="OzC-gj-Y2F" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="R0N-Th-GRj"/>
-                <constraint firstAttribute="trailing" secondItem="OzC-gj-Y2F" secondAttribute="trailing" constant="24" id="UPy-1p-Mpv"/>
-                <constraint firstItem="AOg-Au-QCJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="24" id="XyP-lA-IAQ"/>
-                <constraint firstAttribute="bottom" secondItem="6M8-SZ-LUZ" secondAttribute="bottom" constant="8" id="dXc-t4-ATw"/>
-                <constraint firstItem="AOg-Au-QCJ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8.5" id="hM5-9P-abu"/>
-                <constraint firstItem="6M8-SZ-LUZ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="24" id="jKx-Qq-r4G"/>
-                <constraint firstItem="jfG-mx-cGK" firstAttribute="top" secondItem="AOg-Au-QCJ" secondAttribute="bottom" constant="8" symbolic="YES" id="nbD-oC-cCK"/>
-                <constraint firstItem="6M8-SZ-LUZ" firstAttribute="top" secondItem="jfG-mx-cGK" secondAttribute="bottom" constant="8" symbolic="YES" id="psp-DW-vPS"/>
-            </constraints>
-            <size key="customSize" width="387" height="95"/>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="JZH-ME-fie" secondAttribute="bottom" constant="16" id="4DY-0U-xkR"/>
+                    <constraint firstAttribute="trailing" secondItem="UvQ-fI-YSh" secondAttribute="trailing" constant="24" id="BlL-pp-3SX"/>
+                    <constraint firstAttribute="trailing" secondItem="JZH-ME-fie" secondAttribute="trailing" constant="24" id="Te1-mR-jog"/>
+                    <constraint firstItem="Vug-TO-h1k" firstAttribute="top" secondItem="W6A-OC-y2r" secondAttribute="bottom" constant="25" id="Y1F-bw-yOm"/>
+                    <constraint firstItem="W6A-OC-y2r" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="aPb-Eb-XFK"/>
+                    <constraint firstItem="W6A-OC-y2r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="iAm-NK-lhP"/>
+                    <constraint firstItem="Vug-TO-h1k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="mIb-8w-qmT"/>
+                    <constraint firstAttribute="bottom" secondItem="Vug-TO-h1k" secondAttribute="bottom" constant="16" id="tjp-jB-9I2"/>
+                    <constraint firstItem="UvQ-fI-YSh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="yci-eC-hsC"/>
+                </constraints>
+            </tableViewCellContentView>
+            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="dateOfCreation" destination="jfG-mx-cGK" id="NHq-EH-vbd"/>
-                <outlet property="taskID" destination="OzC-gj-Y2F" id="42Z-2T-8WD"/>
-                <outlet property="taskPriority" destination="6M8-SZ-LUZ" id="SWl-Ki-EPI"/>
-                <outlet property="taskTitle" destination="AOg-Au-QCJ" id="b13-tl-xt7"/>
+                <outlet property="dateOfCreation" destination="Vug-TO-h1k" id="lBq-NX-9iQ"/>
+                <outlet property="taskID" destination="UvQ-fI-YSh" id="WHN-kZ-Ca2"/>
+                <outlet property="taskPriority" destination="JZH-ME-fie" id="AEb-0i-B0f"/>
+                <outlet property="taskTitle" destination="W6A-OC-y2r" id="brH-V5-9YL"/>
             </connections>
-            <point key="canvasLocation" x="-223.91304347826087" y="56.584821428571423"/>
-        </collectionViewCell>
+            <point key="canvasLocation" x="21.739130434782609" y="108.14732142857143"/>
+        </tableViewCell>
     </objects>
 </document>
